Bug 277054 - Some customized shortcuts are lost when kate is restarted
Summary: Some customized shortcuts are lost when kate is restarted
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-04 10:00 UTC by King_DuckZ
Modified: 2011-07-04 22:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description King_DuckZ 2011-07-04 10:00:16 UTC
Version:           unspecified (using KDE 4.5.5) 
OS:                Linux

My Kate version is 3.5.5 (this is not present in the "Application Version" list on this page).
Some default shortcuts conflict with global keyboard shortcuts, thus the need to change them.
This bug is specifically about the OpenHeader plugin, but it could apply to other cases I didn't try.

Reproducible: Always

Steps to Reproduce:
Open Kate and go to Settings -> Configure Kate -> Application -> Plugins and activate the "Open Header" plugin. Its default shortcut is F12, which is already assigned to Yakuake on my machine.
Apply changes and close the configuration window.
Go to Settings -> Configure shortcuts, type "cpp" in the search box to locate the "Open .h/.cpp/.c" action, then change its shortcut to somethin else (eg: Ctrl+Alt+O).
Accept changes, close the configuration window and verify that the new shortcut works in Kate.
Close Kate, the re-open it, the same session as before.

Actual Results:  
The new shortcut for "Open .h/.cpp/.c" doesn't work anymore. Go to the shortcut configuration window, locate the "Open .h/.cpp/.c" action and observe how its shortcut got reset to the default F12.

Expected Results:  
Kate keeps the previously set shortcut for "Open .h/.cpp/.c", as it does with every other action (eg: Uppercase).

If Yakuake is not installed, or its default shortcut has been changed, this might be a less important issue. However, with Yakuake the F12 key doesn't work at all, forcing me to reset a custom shortcut every time I restart Kate. Other shortcuts I've set are correctly remembered between instances of Kate.
Comment 1 Dominik Haumann 2011-07-04 22:06:38 UTC
Git commit 98b2567498456f35712bba5cdbdaa82ce5c2d31e by Dominik Haumann.
Committed on 05/07/2011 at 00:04.
Pushed by dhaumann into branch 'master'.

load shortcuts if the PluginView inherits from KXMLGuiClient

BUG: 277054

M  +6    -2    kate/app/katepluginmanager.cpp     

http://commits.kde.org/kate/98b2567498456f35712bba5cdbdaa82ce5c2d31e
Comment 2 Dominik Haumann 2011-07-04 22:08:18 UTC
Git commit abe6d62d7a093f7fe17c63f6a12a5ebef019f36e by Dominik Haumann.
Committed on 05/07/2011 at 00:04.
Pushed by dhaumann into branch 'KDE/4.7'.

load shortcuts if the PluginView inherits from KXMLGuiClient

BUG: 277054

M  +6    -2    kate/app/katepluginmanager.cpp     

http://commits.kde.org/kate/abe6d62d7a093f7fe17c63f6a12a5ebef019f36e