load shortcuts if the PluginView inherits from KXMLGuiClient

BUG: 277054